--- a/_pages/work.html
+++ b/_pages/work.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Work
+title: Portfolio
 subtitle: Happy users, happy clients.
 desc: Happy users, happy clients.
 permalink: /portfolio/
