--- a/_pages/work.html
+++ b/_pages/work.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Portfolio
-subtitle: Happy users, happy clients.
-desc: Happy users, happy clients.
+subtitle: my work
+desc: my work
 permalink: /portfolio/
 ---
 
